# hw_2

./: .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: CI.yml
benchmark/: main.c
cmake/: cppcheck.cmake
lib/constants/: CMakeLists.txt
lib/constants/include/: constants.h
lib/constants/src/: constants.c
lib/dscanner/: CMakeLists.txt
lib/dscanner/include/: dscanner.h
lib/dscanner/parallel/src/: dscanner.c
lib/dscanner/sequential/include/: dscanner.h
lib/dscanner/src/parallel/: dscanner.c
lib/dscanner/src/sequential/: dscanner.c
lib/dscanner/tests/: CMakeLists.txt
lib/dscanner/tests/src/: dscanner_test.cpp
lib/errors/: CMakeLists.txt
lib/errors/include/: errors.h
lib/fscanner/: CMakeLists.txt
lib/fscanner/include/: fscanner.h
lib/fscanner/src/: fscanner.c
lib/fscanner/tests/: CMakeLists.txt
lib/fscanner/tests/src/: fscanner_test.cpp
lib/heap/: CMakeLists.txt
lib/heap/include/: heap.h
lib/heap/src/: heap.c
lib/heap/tests/: CMakeLists.txt
lib/heap/tests/src/: heap_test.cpp
lib/registry/: CMakeLists.txt
lib/registry/include/: registry.h
lib/registry/src/: registry.c
lib/registry/tests/: CMakeLists.txt
lib/registry/tests/src/: registry_test.cpp
lib/utils/: CMakeLists.txt
lib/utils/include/: utils.h
lib/utils/src/: utils.c
scripts/: benchmark.sh  checks.sh  cpplint.sh
src/: main.c
static/data/: test.rtf  test.txt
